// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LocaleToggle /> should render the default language messages 1`] = `
<a
  href="#"
  onClick={[Function]}
>
  <span
    className="linklabel"
  >
    English
  </span>
</a>
`;

exports[`<LocaleToggle /> should render the language messages 1`] = `
<a
  href="#"
  onClick={[Function]}
>
  <span
    className="linklabel"
  >
    Nederlands
  </span>
</a>
`;
